# rust_deployed_to_cloud

./: .gitignore  Cargo.toml  Dockerfile
src/: lib.rs  main.rs
src/utils/: logging.rs
