[package]
name = "rust_deployed_to_cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "fmt", "local-time", "time"]}
dotenv = "0.15"
time = {version = "0.3.36", features = ["macros"]}
